src/test/ui/rfc1623.stderr
error[E0308]: mismatched types
  --> $DIR/rfc1623.rs:28:8
   |
LL |     f: &id,
   |        ^^^ one type is more general than the other
   |
   = note: expected type `for<'a, 'b> Fn<(&'a Foo<'b>,)>`
              found type `Fn<(&Foo<'_>,)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
